<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toEndOf="@+id/name">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.038" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <ImageView
            android:id="@+id/top_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:scaleType="fitStart"
            android:src="@drawable/background_movies_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_narrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/back_to_movies"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/back_narrow"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            android:fontFamily="@font/roboto"
            android:text="@string/pg"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/back_narrow" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/movie_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_category"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/pg" />

        <TextView
            android:id="@+id/movie_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/category"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star1"
            android:src="@drawable/fill_star"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/movie_category" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star2"
            android:src="@drawable/fill_star"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toTopOf="@+id/star1" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star3"
            android:src="@drawable/fill_star"
            app:layout_constraintBottom_toBottomOf="@+id/star2"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toTopOf="@+id/star2" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star4"
            android:src="@drawable/fill_star"
            app:layout_constraintBottom_toBottomOf="@+id/star3"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toTopOf="@+id/star3" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/star5"
            android:src="@drawable/not_fill_star"
            app:layout_constraintBottom_toBottomOf="@+id/star4"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toTopOf="@+id/star4" />

        <TextView
            android:id="@+id/count_reviewers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/count_reviews"
            android:textAllCaps="true"
            android:textColor="#6D6D80"
            app:layout_constraintBottom_toBottomOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintTop_toTopOf="@+id/star5"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/story_line"
            style="@style/white_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/count_reviewers" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/movie_description"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/story_line"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintEnd_toStartOf="@id/guideVerticalRight"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_description" />

        <TextView
            android:id="@+id/cast_text"
            style="@style/white_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/actors"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/actor1"
            android:src="@drawable/rdm1"
            app:layout_constraintEnd_toStartOf="@+id/actor2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor1_name"
            style="@style/white_14sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/actor1"
            app:layout_constraintStart_toStartOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@id/actor1" />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/actor2"
            android:src="@drawable/ce1"
            app:layout_constraintEnd_toStartOf="@+id/actor3"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor2_name"
            style="@style/white_14sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/actor2"
            app:layout_constraintStart_toStartOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@id/actor2" />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/actor3"
            android:src="@drawable/mr1"
            app:layout_constraintEnd_toStartOf="@+id/actor4"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor3_name"
            style="@style/white_14sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/actor3"
            app:layout_constraintStart_toStartOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@id/actor3" />

        <ImageView
            android:id="@+id/actor4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/actor4"
            android:src="@drawable/kh1"
            app:layout_constraintEnd_toStartOf="@id/guideVerticalRight"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor4_name"
            style="@style/white_14sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/actor4"
            app:layout_constraintStart_toStartOf="@+id/actor4"
            app:layout_constraintTop_toBottomOf="@id/actor4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>