<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.038" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <ImageView
            android:id="@+id/top_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="fitStart"
            android:src="@drawable/background_movies_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_narrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:contentDescription="@null"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/back_narrow"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pg_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            android:fontFamily="@font/roboto"
            android:text="@string/pg"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/back_narrow" />

        <TextView
            android:id="@+id/name_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x4"
            android:fontFamily="@font/roboto"
            android:text="@string/movie_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_category"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/pg_list" />

        <TextView
            android:id="@+id/movie_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x4"
            android:layout_marginTop="@dimen/margin_2x2"
            android:layout_marginEnd="@dimen/margin_4x4"
            android:text="@string/category"
            style="@style/red_14sp"
            app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/name_list" />

        <com.aids61517.easyratingview.EasyRatingView
            android:id="@+id/movies_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x2"
            app:emptyDrawable="@drawable/empty_star_14sp"
            app:fullDrawable="@drawable/fill_star_14sp"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/movie_category"
            app:numStars="5"
            app:rating="4"
            app:spacing="@dimen/spacing_2x"
            app:step="0.5" />

        <TextView
            android:id="@+id/count_reviewers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_reviews"
            android:textAllCaps="true"
            android:textColor="#6D6D80"
            app:layout_constraintBottom_toBottomOf="@+id/movies_rating_bar"
            app:layout_constraintStart_toEndOf="@id/movies_rating_bar"
            app:layout_constraintTop_toTopOf="@+id/movies_rating_bar" />

        <TextView
            android:id="@+id/story_line"
            style="@style/white_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x4"
            android:layout_marginTop="@dimen/margin_3x10"
            android:layout_marginEnd="@dimen/margin_4x4"
            android:text="@string/storyline"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/count_reviewers" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x4"
            android:layout_marginTop="@dimen/margin_2x2"
            android:layout_marginEnd="@dimen/margin_4x4"
            android:layout_marginBottom="@dimen/margin_2x2"
            android:text="@string/movie_description"
            style="@style/gray_14sp"
            app:layout_constraintEnd_toStartOf="@id/guideVerticalRight"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/story_line" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_description" />

        <TextView
            android:id="@+id/cast_text"
            style="@style/white_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4x4"
            android:layout_marginTop="@dimen/margin_2x12"
            android:layout_marginEnd="@dimen/margin_4x4"
            android:text="@string/actors"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="@dimen/margin_8x10"
            android:layout_marginTop="@dimen/margin_2x4"
            android:contentDescription="@string/actor1"
            android:src="@drawable/rdm1"
            app:layout_constraintEnd_toStartOf="@+id/actor2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/guideVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor1_name"
            style="@style/white_14sp"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="wrap_content"
            android:text="@string/actor1"
            app:layout_constraintStart_toStartOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@id/actor1" />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="@dimen/margin_8x10"
            android:layout_marginTop="@dimen/margin_2x4"
            android:contentDescription="@string/actor2"
            android:src="@drawable/ce1"
            app:layout_constraintEnd_toStartOf="@+id/actor3"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor2_name"
            style="@style/white_14sp"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="wrap_content"
            android:text="@string/actor2"
            app:layout_constraintStart_toStartOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@id/actor2" />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="@dimen/margin_8x10"
            android:layout_marginTop="@dimen/margin_2x4"
            android:contentDescription="@string/actor3"
            android:src="@drawable/mr1"
            app:layout_constraintEnd_toStartOf="@+id/actor4"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor3_name"
            style="@style/white_14sp"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="wrap_content"
            android:text="@string/actor3"
            app:layout_constraintStart_toStartOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@id/actor3" />

        <ImageView
            android:id="@+id/actor4"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="@dimen/margin_8x10"
            android:layout_marginTop="@dimen/margin_2x4"
            android:contentDescription="@string/actor4"
            android:src="@drawable/kh1"
            app:layout_constraintEnd_toStartOf="@id/guideVerticalRight"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@id/cast_text" />

        <TextView
            android:id="@+id/actor4_name"
            style="@style/white_14sp"
            android:layout_width="@dimen/margin_8x10"
            android:layout_height="wrap_content"
            android:text="@string/actor4"
            app:layout_constraintStart_toStartOf="@+id/actor4"
            app:layout_constraintTop_toBottomOf="@id/actor4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>