<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_movie_list"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_marginStart="@dimen/margin_3x4"
        android:layout_marginEnd="@dimen/margin_3x4"
        android:layout_marginTop="@dimen/margin_2x8"
        android:layout_marginBottom="@dimen/margin_2x8"
        android:background="@drawable/rectangle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/poster_img_movie_list"
        android:layout_width="@dimen/preview_width"
        android:layout_height="@dimen/preview_height"
        android:layout_margin="@dimen/margin_2x"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:foreground="@drawable/rectangle_shape"
        android:scaleType="centerCrop"
        android:src="@drawable/img_avengers_end_game"
        app:layout_constraintStart_toStartOf="@id/view_movie_list"
        app:layout_constraintTop_toTopOf="@id/view_movie_list" />

    <ImageView
        android:id="@+id/pg_background_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x3"
        android:layout_marginTop="@dimen/margin_2x4"
        android:background="@drawable/pg_rectangle"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="@id/poster_img_movie_list"
        app:layout_constraintTop_toTopOf="@id/poster_img_movie_list" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x3"
        android:layout_marginEnd="@dimen/margin_2x4"
        app:layout_constraintEnd_toEndOf="@id/view_movie_list"
        app:layout_constraintTop_toTopOf="@id/pg_background_list"
        android:background="@drawable/white_favorite"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/minimum_age_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x2"
        android:layout_marginBottom="@dimen/margin_2x2"
        android:text="@string/minimum_age"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/pg_background_list"
        app:layout_constraintStart_toStartOf="@id/pg_background_list"
        app:layout_constraintTop_toTopOf="@id/pg_background_list" />

    <TextView
        android:id="@+id/movie_category_list"
        style="@style/red_8sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3x4"
        android:layout_marginTop="@dimen/margin_214"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@id/view_movie_list"
        app:layout_constraintTop_toTopOf="@id/view_movie_list" />

    <com.aids61517.easyratingview.EasyRatingView
        android:id="@+id/movie_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3x4"
        android:layout_marginTop="@dimen/margin_2x2"
        app:emptyDrawable="@drawable/empty_star_8sp"
        app:fullDrawable="@drawable/fill_star_8sp"
        app:layout_constraintStart_toStartOf="@id/view_movie_list"
        app:layout_constraintTop_toBottomOf="@id/movie_category_list"
        app:numStars="5"
        app:rating="4"
        app:spacing="@dimen/spacing_2x"
        app:step="0.5" />

    <TextView
        android:id="@+id/count_reviewers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_2x3"
        android:paddingEnd="@dimen/padding_2x3"
        android:text="@string/count_reviews"
        android:textAllCaps="true"
        android:textColor="#6D6D80"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_rating_bar"
        app:layout_constraintStart_toEndOf="@id/movie_rating_bar"
        app:layout_constraintTop_toTopOf="@+id/movie_rating_bar" />

    <TextView
        android:id="@+id/title_movie_list"
        style="@style/white_14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3x4"
        android:layout_marginTop="@dimen/margin_2x4"
        android:layout_marginEnd="@dimen/margin_3x4"
        android:text="@string/movie_title"
        app:layout_constraintBottom_toTopOf="@id/movie_length_list"
        app:layout_constraintStart_toStartOf="@id/view_movie_list"
        app:layout_constraintTop_toBottomOf="@id/poster_img_movie_list" />

    <TextView
        android:id="@+id/movie_length_list"
        style="@style/grey_8sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3x4"
        android:text="@string/movie_length"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@id/view_movie_list"
        app:layout_constraintTop_toBottomOf="@id/title_movie_list" />


</androidx.constraintlayout.widget.ConstraintLayout>